Clarify 'data' folder contents In this Commit, i would like to specify that the 'data' folder will contain processed and optimized  data, excluding raw data, wich is availableon the MORED public website(hhtps://moreddataset.github.io/MORED).This folder is intended to store various types of preprocessed data used in the machine learning pipeline and analyses.

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 .vscode/
 
 #Ignore raw data files, but not the 'data' directory itself ( several optimized versions will be added after adequate treatement ...
-data/raw_data
+data/donnéesMORED
 
 #Ignore Python Cache files 
 __pycache__/
