--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 .vscode/
 
 #Ignore raw data files, but not the 'data' directory itself ( several optimized versions will be added after adequate treatement ...
-data/donnéesMORED
+Raw_data/*
 
 #Ignore Python Cache files 
 __pycache__/
